--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,3 +3,4 @@
 <app-footer></app-footer>
 <ngx-snackbar [position]="'top-right'" [max]="1" [timeout]="2000" [background]="'#343434'" [accent]="'#2196f3'"></ngx-snackbar>
 <app-loader></app-loader>
+<app-call-me></app-call-me>
