--- a/src/app/common/footer/footer.component.html
+++ b/src/app/common/footer/footer.component.html
@@ -4,13 +4,13 @@
         <div class="footer-top">
             <div class="container">
                 <div class="row">
-                    <div class="col-sm-2">
+                    <div class="col-sm-3">
                         <div class="companyinfo">
                             <h2><span>quanaudio</span>.vn</h2>
                             <p>quanaudio - Mang lại niềm kiêu hãnh cho ngôi nhà của bạn</p>
                         </div>
                     </div>
-                    <div class="col-sm-7">
+                    <div class="col-sm-6">
                         <div class="col-sm-3">
                             <div class="video-gallery text-center">
                                 <a href="https://www.youtube.com/watch?v=JrdausxaitA" target="_blank">
@@ -92,8 +92,7 @@
                     </div>
                     <div class="col-sm-3">
                         <div class="address">
-                            <img src="assets/images/home/map.png" alt="" />
-                            <!-- <p>Quan âm thanh vươn tầm thế giới</p> -->
+                            <img src="assets/images/home/map.png" alt="" width="100%" />
                         </div>
                     </div>
                 </div>
