--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -51,6 +51,20 @@
                         <!--shipping-->
                         <img src="assets/images/home/shipping.jpg" alt="" />
                     </div>
+                    <div class="shipping text-center">
+                        <app-fb-page></app-fb-page>
+                    </div>
+                    <div class="shipping text-center">
+                        <iframe width="100%" height="auto" src="https://www.youtube.com/embed/JrdausxaitA" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                    </div>
+                    <div class="shipping text-center" style="padding: 20px 0px;" *ngFor="let itemNew of news">
+                        <a [routerLink]="['/detail-news', itemNew.idnews, itemNew.title| urlPipe: itemNew.title]">
+                            <img src="{{itemNew.image}}" alt="quanaudio.vn" width="35%" style="float: left;padding: 0px 10px;" />
+                            <h5 style="margin: 0px;text-align: justify;padding: 0px 10px;">
+                                {{itemNew.title | titlePipe}}
+                            </h5>
+                        </a>
+                    </div>
                     <!--/shipping-->
 
                 </div>
@@ -65,15 +79,17 @@
                             <div class="product-image-wrapper">
                                 <div class="single-products">
                                     <div class="productinfo text-center">
-                                        <img src="assets/images/audio/{{audio.image}}" alt="{{audio.name}}" />
+                                        <img src="{{audio.image[0]}}" alt="{{audio.name}}" />
                                         <h2>{{audio.price | pricePipe: audio.price}} VNĐ</h2>
-                                        <p>{{audio.name}}</p>
+                                        <h4 class="product-sale vibrate">{{audio.sale}}</h4>
+                                        <h4>{{audio.name}}</h4>
                                         <a class="btn btn-default add-to-cart" [routerLink]="['/detail-page', audio.idaudio, audio.name| urlPipe: audio.name]"><i class="fa fa-hand-o-right"></i>Xem ngay</a>
                                     </div>
                                     <div class="product-overlay">
                                         <div class="overlay-content">
                                             <h2>{{audio.price | pricePipe: audio.price}} VNĐ</h2>
-                                            <p>{{audio.name}}</p>
+                                            <h4 class="product-sale">{{audio.sale}}</h4>
+                                            <h4>{{audio.name}}</h4>
                                             <a (click)="addCart(audio.idaudio)" class="btn btn-default add-to-cart"><i class="fa fa-shopping-cart"></i>Mua ngay</a>
                                         </div>
                                     </div>
