--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,12 @@
 /* You can add global styles to this file, and also import other style files */
 
+.vibrate {
+    animation: shake 2s cubic-bezier(.36, .07, .19, .97) both infinite;
+    transform: translate3d(0, 0, 0);
+    backface-visibility: hidden;
+    perspective: 1000px;
+}
+
 .cursor-pointer {
     cursor: pointer;
 }
